refactored lists module, models

--- a/src/app/management/components/management/management.component.html
+++ b/src/app/management/components/management/management.component.html
@@ -9,6 +9,6 @@
 </div>
 <div class="main">
   <app-question
-    *ngFor="let item of data | async"
+    *ngFor="let item of questions$ | async"
     [question]="item"></app-question>
 </div>
