--- a/src/app/lists/components/lists/lists.component.css
+++ b/src/app/lists/components/lists/lists.component.css
@@ -10,7 +10,7 @@
   margin: 20px;
   flex-basis: 50%;
 }
-.right ::before {
+.left ::after {
   content: '';
   display: block;
   position: absolute;
