--- a/src/app/lists/components/question/question.component.css
+++ b/src/app/lists/components/question/question.component.css
@@ -1,15 +1,37 @@
 .form {
   display: flex;
   flex-direction: column;
-  gap: 20px;
+  gap: 10px;
 }
 .wrapper {
   margin: 10px auto;
+}
+
+.label {
+  display: block;
+  margin-bottom: 20px;
+}
+.open {
+  width: 100%;
 }
 .submit {
   width: 200px;
   margin: 0 auto;
 }
+::ng-deep .mdc-text-field--disabled .mdc-text-field__input {
+  opacity: 0.7 !important;
+  color: #bd1e51 !important;
+}
+
+::ng-deep
+  .mat-mdc-checkbox
+  .mdc-checkbox
+  .mdc-checkbox__native-control[disabled]:checked
+  ~ .mdc-checkbox__background {
+  opacity: 0.7 !important;
+  background-color: #bd1e51 !important;
+}
+
 ::ng-deep
   .mat-mdc-radio-button
   .mdc-radio
