--- a/src/app/management/components/delete-modal/delete-modal.component.html
+++ b/src/app/management/components/delete-modal/delete-modal.component.html
@@ -7,7 +7,10 @@
     </p>
   </div>
   <div mat-dialog-content>
-    Are you sure you want to delete question {{ data.id }} ?
+    Are you sure you want to delete question ?
+    <p class="question">
+      {{ data.question }}
+    </p>
   </div>
   <div
     mat-dialog-actions
@@ -23,7 +26,7 @@
       mat-dialog-close
       cdkFocusInitial
       color="warn"
-      (click)="onDelete(data.id)">
+      (click)="onDelete()">
       Delete
     </button>
   </div>
