--- a/src/app/lists/components/question/question.component.css
+++ b/src/app/lists/components/question/question.component.css
@@ -18,6 +18,10 @@
   width: 200px;
   margin: 0 auto;
 }
+.btn {
+  margin-left: auto;
+  width: 150px;
+}
 ::ng-deep .mdc-text-field--disabled .mdc-text-field__input {
   opacity: 0.7 !important;
   color: #bd1e51 !important;
